--- a/roboshop.conf
+++ b/roboshop.conf
@@ -4,10 +4,10 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://172.31.88.200:8080/; }
-location /api/user/ { proxy_pass http://localhost:8080/; }
-location /api/cart/ { proxy_pass http://localhost:8080/; }
-location /api/shipping/ { proxy_pass http://localhost:8080/; }
+location /api/catalogue/ { proxy_pass http://172.31.80.24:8080/; }
+location /api/user/ { proxy_pass http://172.31.89.200:8080/; }
+location /api/cart/ { proxy_pass http://172.31.83.90:8080/; }
+location /api/shipping/ { proxy_pass http://172.31.90.192:8080/; }
 location /api/payment/ { proxy_pass http://localhost:8080/; }
 
 location /health {
