--- a/user.service
+++ b/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=172.31.91.121
-Environment=MONGO_URL="mongodb://172.31.87.157:27017/users"
+Environment=REDIS_HOST=redis.beesh.life
+Environment=MONGO_URL="mongodb://mongodb.beesh.life:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
