--- a/shipping.service
+++ b/shipping.service
@@ -3,8 +3,8 @@ Description=Shipping Service
 
 [Service]
 User=roboshop
-Environment=CART_ENDPOINT=172.31.83.90:8080
-Environment=DB_HOST=172.31.83.85
+Environment=CART_ENDPOINT=cart.beesh.life:8080
+Environment=DB_HOST=mysql.beesh.life
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
 
